# veebot-rust

./: .env  .gitignore  Cargo.toml  schema-sqlite.sql  schema.sql
src/: ai.rs  bot.rs  config.rs  context.rs  database.rs  embeddings.rs  lib.rs  main.rs  postgres.rs  search.rs  sqlite.rs
