[package]
name = "veebot"
version = "1.0.0"
description = "A Discord bot that can search online, provide keyword-based help, and more"
authors = [""]
edition = "2021"

[lib]
name = "veebot"
path = "src/lib.rs"

[[bin]]
name = "veebot"
path = "src/main.rs"

[dependencies]
# Discord bot framework
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "http", "cache"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
async-trait = "0.1.77"
